<resources>
    <string name="app_name">S175120 Hangman 3.0</string>
    <string name="playBtn">"Let's play!"</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="scoresBtn">Highscores</string>
    <string name="title">HANGMAN</string>
    <string name="guesses">"Your guesses: \n"</string>
    <string name="the_hanged_man">The Hanged Man</string>
    <string name="guess_the_word">Guess the word!</string>
    <string name="empty_string"> </string>
    <string name="new_game_question">Play again?</string>
    <string name="new_game_yes">Yes please!</string>
    <string name="new_game_no">"Nah, I'm done for now"</string>
    <string name="easy">Beginner</string>
    <string name="medium">Intermediate</string>
    <string name="hard">Pro</string>
    <string name="choose_difficulty">Choose level!</string>
    <string name="next">Next</string>
    <string name="play">Play!</string>
    <string name="musicOption">Enable music!</string>


    <string name="keyQ">q</string>
    <string name="keyW">w</string>
    <string name="keyE">e</string>
    <string name="keyR">r</string>
    <string name="keyT">t</string>
    <string name="keyY">y</string>
    <string name="keyU">u</string>
    <string name="keyI">i</string>
    <string name="keyO">o</string>
    <string name="keyP">p</string>
    <string name="keyÅ">å</string>
    <string name="keyA">a</string>
    <string name="keyS">s</string>
    <string name="keyD">d</string>
    <string name="keyF">f</string>
    <string name="keyG">g</string>
    <string name="keyH">h</string>
    <string name="keyJ">j</string>
    <string name="keyK">k</string>
    <string name="keyL">l</string>
    <string name="keyÆ">æ</string>
    <string name="keyØ">ø</string>
    <string name="keyZ">z</string>
    <string name="keyX">x</string>
    <string name="keyC">c</string>
    <string name="keyV">v</string>
    <string name="keyB">b</string>
    <string name="keyN">n</string>
    <string name="keyM">m</string>

    <string-array name="websites">
        <item>https://www.dr.dk</item>
        <item>http://tv2.dk</item>
        <item>https://da.wikipedia.org/wiki/Forside</item>
        <item>https://politiken.dk</item>
        <item>https://www.bt.dk</item>
        <item>https://videnskab.dk</item>
        <item>https://www.dtu.dk</item>
    </string-array>
</resources>
